tests/ui/traits/similarly_named_trait.stderr
error[E0277]: the trait bound `St: Trait` is not satisfied
  --> $DIR/similarly_named_trait.rs:13:10
   |
LL |     func(m::St);
   |     ---- ^^^^^ the trait `Trait` is not implemented for `St`
   |     |
   |     required by a bound introduced by this call
   |
   = note: `St` implements similarly named `m::Trait`, but not `Trait`
help: this trait has no implementations, consider adding one
  --> $DIR/similarly_named_trait.rs:1:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `func`
  --> $DIR/similarly_named_trait.rs:9:12
   |
LL | fn func<T: Trait>(_: T) {}
   |            ^^^^^ required by this bound in `func`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
